# biosparse

./: .clangd  .gitignore  Cargo.toml  README.md  demo_assume_optimization.py  example_numba_usage.py  inspect_numba_ir.py  proposal.md  pyproject.toml  test.py  test_all_phases.py  test_assume_effectiveness.py  test_hvg_opt.py  test_numba.py  test_numba_assume.py  test_optimized.py  test_phase1_row_col.py  test_phase2_getitem.py  test_transpose.py  test_transpose_jit.py  test_transpose_simple.py  verify_zero_python_overhead.py
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  benchmark_hvg_vs_scanpy.py  benchmark_kernels.py  benchmark_mwu_vs_scanpy.py  benchmark_sparse_vs_scipy.py
docs/: numba_assume_optimization.md  numba_assume_summary.md  numba_integration.md  numba_optimization_analysis.md  storage设计文档.md
scripts/: build_wheel.py
src/python/: __init__.py
src/rust/: ffi.rs  lib.rs  span.rs  storage.rs  transpose.rs
tests/: test_optim.py  test_transpose_debug.py  test_transpose_final.py
tests/python/: __init__.py  conftest.py  test_binding_sparse.py  test_integration.py  test_intrinsics.py  test_ir_processor.py  test_jit.py  test_kernel_descriptive.py  test_kernel_hvg.py  test_kernel_mmd.py  test_kernel_mwu.py  test_kernel_mwu_math.py  test_kernel_parallel.py  test_kernel_regression.py  test_kernel_stats.py  test_kernel_tdist.py  test_kernel_ttest.py  test_kernel_ttest_math.py  test_loop_hints.py  test_numba_access.py  test_numba_boxing.py  test_numba_conversions.py  test_numba_integration.py  test_numba_iterators.py  (+11 more)
(+54 files in other folders)
