[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biosparse"
version = "0.1.0"
description = "High-performance sparse matrix computation library for bioinformatics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cffi",
    "numba",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
